a working news page

--- a/pages/testing/testing.html
+++ b/pages/testing/testing.html
@@ -68,5 +68,9 @@
             <h1>Testing Locations</h1>
             <p class="lead">Find Available Testing Location Near you</p>
         </div>
+
+        <div>
+            
+        </div>
 </body>
 </html>
