--- a/pages/resources/resources.html
+++ b/pages/resources/resources.html
@@ -17,7 +17,7 @@
     <script src="https://kit.fontawesome.com/06e4885c0f.js" crossorigin="anonymous"></script>
 
     <!-- My Style css file -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="resources.css">
 
     <title>Resources</title>
 </head>
@@ -26,7 +26,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="../../index.html">Covid-19 Information Center</a>
+            <a class="navbar-brand js-scroll-trigger" href="../../index.html" style="box-shadow: none;">Covid-19 Information Center</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -65,8 +65,20 @@
         </nav>
     
         <div class="container-fluid bg-light p-5 text-center my-5">
+            <img src="../../images/resources.svg" alt="Statistics" height="64" style="margin-bottom: 10px;">
             <h1>Resources</h1>
             <p class="lead">The source of our data</p>
         </div>
+
+        <div style="text-align: center;">
+            <p>
+                The api that was used for this project is from <a href="https://covidnow.docs.apiary.io/">https://covidnow.docs.apiary.io/</a>
+            </p>
+            <br>
+            <p>
+                To support them donate to this link <a href="https://ko-fi.com/covidnow">https://ko-fi.com/covidnow</a> 
+            </p>
+        </div>
+
     </body>
 </html>
