--- a/pages/timeline/timeline.html
+++ b/pages/timeline/timeline.html
@@ -17,7 +17,7 @@
     <script src="https://kit.fontawesome.com/06e4885c0f.js" crossorigin="anonymous"></script>
 
     <!-- My Style css file -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="timeline.css">
 
     <title>Timeline</title>
 </head>
@@ -26,7 +26,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="../../index.html">Covid-19 Information Center</a>
+            <a class="navbar-brand js-scroll-trigger" href="../../index.html" style="box-shadow: none;">Covid-19 Information Center</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
