--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <!-- table of data -->
     <div class="container-md" >
         <table class="table table-bordered" >
-        <thead style="position: sticky; top: 40px;">
-            <tr class="thead-dark" style="position: sticky; top: 40px;">
+        <thead >
+            <tr class="thead-dark" >
                 <th scope="col">Countries</th>
                 <th scope="col">Recovered</th>
                 <th scope="col">Confirmed</th>
