change about page images

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -83,19 +83,19 @@
 
         <a href="https://github.com/ManveerGill">
         <div class="card">
-            <img class="card-img-top" src="../../images/gill.png" alt="Gill">
+            <img class="card-img-top" src="../../images/gill.jpg" alt="Gill">
             <div class="card-body">
-              <h5 class="card-title">Gill</h5>
+              <h5 class="card-title">Manveer Gill</h5>
               <p class="card-text">Computer Science 2024 @RyersonU</p>
             </div>
         </div>
         </a>
         
-        <a href="https://github.com/ManveerGill">
+        <a href="https://github.com/laithkamal">
         <div class="card">
             <img class="card-img-top" src="../../images/laith.jpg" alt="Laith">
             <div class="card-body">
-              <h5 class="card-title">Laith</h5>
+              <h5 class="card-title">Laith Kamal</h5>
               <p class="card-text">Computer Science 2024 @RyersonU</p>
             </div>
         </div>
