--- a/pages/resources/resources.html
+++ b/pages/resources/resources.html
@@ -67,7 +67,7 @@
         <div class="container-fluid bg-light p-5 text-center my-5">
             <img src="../../images/resources.svg" alt="Statistics" height="64" style="margin-bottom: 10px;">
             <h1>Resources</h1>
-            <p class="lead">The source of our data</p>
+            <p class="lead">The source of our data and the tools we used</p>
         </div>
 
         <div style="text-align: center;">
