--- a/pages/prevention/prevention.html
+++ b/pages/prevention/prevention.html
@@ -65,8 +65,8 @@
         </nav>
     
         <div class="container-fluid bg-light p-5 text-center my-5">
-            <h1>Treatments</h1>
-            <p class="lead">Possible Treatments page</p>
+            <h1>Prevention</h1>
+            <p class="lead">Prevention page</p>
         </div>
 </body>
 </html>
