--- a/pages/prevention/prevention.html
+++ b/pages/prevention/prevention.html
@@ -27,7 +27,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="../../index.html">Covid-19 Information Center</a>
+            <a class="navbar-brand js-scroll-trigger" href="../../index.html">Coronavirus Information Center</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -41,9 +41,6 @@
                 </li>
                 <li>
                     <a class="nav-link js-scroll-trigger" href="">Prevention</a>
-                </li>
-                <li>
-                    <a class="nav-link js-scroll-trigger" href="../../pages/treatment/treatment.html">Treatment</a>
                 </li>
                 <li>
                     <a class="nav-link js-scroll-trigger" href="../../pages/resources/resources.html">Resources</a>
