--- a/pages/resources/resources.html
+++ b/pages/resources/resources.html
@@ -26,7 +26,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="../../index.html" style="box-shadow: none;">Covid-19 Information Center</a>
+            <a class="navbar-brand js-scroll-trigger" href="../../index.html" style="box-shadow: none;">Coronavirus Information Center</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,9 +40,6 @@
                 </li>
                 <li>
                     <a class="nav-link js-scroll-trigger" href="../../pages/prevention/prevention.html">Prevention</a>
-                </li>
-                <li>
-                    <a class="nav-link js-scroll-trigger" href="../../pages/treatment/treatment.html">Treatment</a>
                 </li>
                 <li>
                     <a class="nav-link js-scroll-trigger" href="">Resources</a>
@@ -72,11 +69,15 @@
 
         <div style="text-align: center;">
             <p>
-                The api that was used for this project is from <a href="https://covidnow.docs.apiary.io/">https://covidnow.docs.apiary.io/</a>
+                The api that was used for this project is from <a href="https://covidnow.docs.apiary.io/">Covid Now</a>
             </p>
             <br>
             <p>
-                To support them donate to this link <a href="https://ko-fi.com/covidnow">https://ko-fi.com/covidnow</a> 
+                The website is hosted on Ryerson University Server (SCS) <a href="https://www.ryerson.ca/ccs/services/webcontentmgmt/">Hosting at Ryerson</a> 
+            </p>
+            <br>
+            <p>
+                The used free icons we have used are from <a href="https://www.iconfinder.com/p/coronavirus-awareness-icons">Icon Finder</a> 
             </p>
         </div>
 
