--- a/pages/prevention/prevention.html
+++ b/pages/prevention/prevention.html
@@ -70,9 +70,9 @@
         </div>
 
 
-        <div class="container-lg" >
+        <div class="container-md" >
             <div style="text-align: left; margin-left: 50px; margin-right: 50px;">
-                <h4>How it Spreads</h4>
+                <h2 style="margin-bottom: 20px;">How it Spreads?</h2>
                 <p>
                     The virus that causes COVID-19 is mainly transmitted through droplets generated when an infected person coughs, sneezes, or exhales. These droplets are too heavy to hang in the air, and quickly fall on floors or surfaces.
     You can be infected by breathing in the virus if you are within close proximity of someone who has COVID-19, or by touching a contaminated surface and then your eyes, nose or mouth.
