add feedback tab to the navbar

--- a/pages/timeline/timeline.html
+++ b/pages/timeline/timeline.html
@@ -53,9 +53,12 @@
                 <li>
                     <a class="nav-link js-scroll-trigger" href="../../pages/faq/faq.html">FAQ</a>
                 </li>
-                    <li>
-                <a class="nav-link js-scroll-trigger" href="../../pages/about/about.html">About</a>
+                <li>
+                  <a class="nav-link js-scroll-trigger" href="../../pages/about/about.html">About</a>
                 </li>
+                <li>
+                  <a class="nav-link js-scroll-trigger" href="../../pages/feedback/feedback.html">Feedback</a>
+              </li>
             </ul>
             </div>
         </div>
