change timeline theme to match the rest of pages

--- a/pages/timeline/timeline.html
+++ b/pages/timeline/timeline.html
@@ -67,7 +67,8 @@
         <div class="container-fluid bg-light p-5 text-center my-5">
             <h1>Timeline</h1>
             <p class="lead">A brief timeline of Covid-19</p>
-            
+        </div>
+        <div class="container-md" >   
             <div class="container-timeline">
                 <div class="timeline">
                   <ul>
