--- a/pages/symptoms/symptoms.html
+++ b/pages/symptoms/symptoms.html
@@ -26,7 +26,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="../../index.html" style="box-shadow: none;">Coronavirus Information Center</a>
+            <a class="navbar-brand js-scroll-trigger" href="../../index.html" style="box-shadow: none;">Covid-19 Information Center</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,6 +40,9 @@
                 </li>
                 <li>
                     <a class="nav-link js-scroll-trigger" href="../../pages/prevention/prevention.html">Prevention</a>
+                </li>
+                <li>
+                    <a class="nav-link js-scroll-trigger" href="../../pages/treatment/treatment.html">Treatment</a>
                 </li>
                 <li>
                     <a class="nav-link js-scroll-trigger" href="../../pages/resources/resources.html">Resources</a>
@@ -56,17 +59,41 @@
                     <li>
                 <a class="nav-link js-scroll-trigger" href="../../pages/about/about.html">About</a>
                 </li>
-                <li>
-                    <a class="nav-link js-scroll-trigger" href="../../pages/feedback/feedback.html">Feedback</a>
-                </li>
             </ul>
             </div>
         </div>
         </nav>
     
         <div class="container-fluid bg-light p-5 text-center my-5">
+            <img src="sick.png" alt="" class="pics">
             <h1>Symptoms page</h1>
-            <p class="lead">How sick are you lol</p>
+            <p class="lead">Figure out if you're sick!</p>
         </div>
+        <h3 style="text-align: center;">Most Common Symptoms</h3>
+        <div class="gallery">
+            <img src="fever.png" alt="Cinque Terre" width="600" height="400">
+          </a>
+          <h6></h6>
+          <div class="desc"><h3>Fever</h3></div>
+        </div>
+        <div class="gallery">
+            <img src="dry.png" alt="Cinque Terre" width="600" height="400">
+          </a>
+          <h6></h6>
+          <div class="desc"><h3>Dry Cough</h3></div>
+        </div>
+        <div class="gallery">
+            <img src="tired.png" alt="Cinque Terre" width="600" height="400">
+          </a>
+          <h6></h6>
+          <div class="desc"><h3>Tiredness & Dizziness</h3></div>
+        </div>
+        <div class="gallery">
+            <img src="short.png" alt="Cinque Terre" width="600" height="400">
+          </a>
+          <h6></h6>
+          <div class="desc"><h3>Shortness of breath</h3></div>
+        </div>
+    </div>
     </body>
 </html>
