--- a/pages/symptoms/symptoms.html
+++ b/pages/symptoms/symptoms.html
@@ -71,25 +71,25 @@
         </div>
         <h3 style="text-align: center;">Most Common Symptoms</h3>
         <div class="gallery">
-            <img src="fever.png" alt="Cinque Terre" width="600" height="400">
+            <img src="../../images/fever.png" alt="Cinque Terre" width="600" height="400">
           </a>
           <h6></h6>
           <div class="desc"><h3>Fever</h3></div>
         </div>
         <div class="gallery">
-            <img src="dry.png" alt="Cinque Terre" width="600" height="400">
+            <img src="../../images/dry.png" alt="Cinque Terre" width="600" height="400">
           </a>
           <h6></h6>
           <div class="desc"><h3>Dry Cough</h3></div>
         </div>
         <div class="gallery">
-            <img src="tired.png" alt="Cinque Terre" width="600" height="400">
+            <img src="../../images/tired.png" alt="Cinque Terre" width="600" height="400">
           </a>
           <h6></h6>
           <div class="desc"><h3>Tiredness & Dizziness</h3></div>
         </div>
         <div class="gallery">
-            <img src="short.png" alt="Cinque Terre" width="600" height="400">
+            <img src="../../images/short.png" alt="Cinque Terre" width="600" height="400">
           </a>
           <h6></h6>
           <div class="desc"><h3>Shortness of breath</h3></div>
