--- a/pages/feedback/feedbackDone.html
+++ b/pages/feedback/feedbackDone.html
@@ -17,16 +17,16 @@
     <script src="https://kit.fontawesome.com/06e4885c0f.js" crossorigin="anonymous"></script>
 
     <!-- My Style css file -->
-    <link rel="stylesheet" href="symptoms.css">
+    <link rel="stylesheet" href="resources.css">
 
-    <title>symptoms</title>
+    <title>Resources</title>
 </head>
 <body>
     
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="../../index.html" style="box-shadow: none;">Covid-19 Information Center</a>
+            <a class="navbar-brand js-scroll-trigger" href="../../index.html" style="box-shadow: none;">Coronavirus Information Center</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -36,16 +36,13 @@
                     <a class="nav-link js-scroll-trigger" href="../../pages/testing/testing.html">Testing</a>
                 </li>
                 <li>
-                    <a class="nav-link js-scroll-trigger" href="">Symptoms</a>
+                    <a class="nav-link js-scroll-trigger" href="../../pages/symptoms/symptoms.html">Symptoms</a>
                 </li>
                 <li>
                     <a class="nav-link js-scroll-trigger" href="../../pages/prevention/prevention.html">Prevention</a>
                 </li>
                 <li>
-                    <a class="nav-link js-scroll-trigger" href="../../pages/treatment/treatment.html">Treatment</a>
-                </li>
-                <li>
-                    <a class="nav-link js-scroll-trigger" href="../../pages/resources/resources.html">Resources</a>
+                    <a class="nav-link js-scroll-trigger" href="">Resources</a>
                 </li>
                 <li>
                     <a class="nav-link js-scroll-trigger" href="../../pages/timeline/timeline.html">Timeline</a>
@@ -59,39 +56,36 @@
                     <li>
                 <a class="nav-link js-scroll-trigger" href="../../pages/about/about.html">About</a>
                 </li>
+                <li>
+                    <a class="nav-link js-scroll-trigger" href="../../pages/feedback/feedback.html">Feedback</a>
+                </li>
             </ul>
             </div>
         </div>
         </nav>
     
         <div class="container-fluid bg-light p-5 text-center my-5">
-            <img src="sick.png" alt="" class="pics">
-            <h1>Symptoms page</h1>
-            <p class="lead">Figure out if you're sick!</p>
+            <img src="../../images/resources.svg" alt="Statistics" height="64" style="margin-bottom: 10px;">
+            <h1>Feedback</h1>
+            <p class="lead">Thank you for taking the time!</p>
         </div>
-        <h3 style="text-align: center;">Most Common Symptoms</h3>
-        <div class="gallery">
-            <img src="../../images/fever.png" alt="Cinque Terre" width="600" height="400">
-          <h6></h6>
-          <div class="desc"><h3>Fever</h3></div>
-        </div>
-        <div class="gallery">
-            <img src="../../images/dry.png" alt="Cinque Terre" width="600" height="400">
-          <h6></h6>
-          <div class="desc"><h3>Dry Cough</h3></div>
-        </div>
-        <div class="gallery">
-            <img src="../../images/tired.png" alt="Cinque Terre" width="600" height="400">
 
-          <h6></h6>
-          <div class="desc"><h3>Tiredness & Dizziness</h3></div>
+        <div class="container-md" style="display: flex; justify-content: center; align-items: center;">
+            Thank You
         </div>
-        <div class="gallery">
-            <img src="../../images/short.png" alt="Cinque Terre" width="600" height="400">
-          </a>
-          <h6></h6>
-          <div class="desc"><h3>Shortness of breath</h3></div>
-        </div>
-    </div>
+
+        <!-- <form action="test.php" method="get">
+            <label for="score">score:</label><br>
+            <select id="score" name="score">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+              </select><br>
+              <label for="comment">comment:</label><br>
+              <textarea name="comment" rows="10" cols="30"></textarea>
+            <input type="submit" value="Submit">
+        </form> -->
+
     </body>
 </html>
