change resourse to php, retrieve and insert

--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -17,7 +17,7 @@
     <script src="https://kit.fontawesome.com/06e4885c0f.js" crossorigin="anonymous"></script>
 
     <!-- My Style css file -->
-    <link rel="stylesheet" href="resources.css">
+    <link rel="stylesheet" href="feedback.css">
 
     <title>Resources</title>
 </head>
@@ -72,7 +72,7 @@
 
         <div class="container-md" style="display: flex; justify-content: center; align-items: center;">
             <div class="card" style="max-width: 40rem; padding:10px;">
-                <form action="https://cps530-labs.000webhostapp.com/index.php" method="get">
+                <form action="https://covid-info-center.000webhostapp.com/pages/feedback/insert.php" method="get">
                     <div class="form-group">
                         <label for="score" style="font-size: 15px; margin-bottom: 20px">Based on your experience using Coronavirus Information Center, how likely are you to recommend us to a colleague, a friend or a family member?</label>
                         <select class="form-control" id="score" name="score">
@@ -97,19 +97,6 @@
                 </form>
             </div>
         </div>
-
-        <!-- <form action="test.php" method="get">
-            <label for="score">score:</label><br>
-            <select id="score" name="score">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-              </select><br>
-              <label for="comment">comment:</label><br>
-              <textarea name="comment" rows="10" cols="30"></textarea>
-            <input type="submit" value="Submit">
-        </form> -->
 
     </body>
 </html>
