--- a/pages/feedback/feedbackDone.html
+++ b/pages/feedback/feedbackDone.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="container-md" style="display: flex; justify-content: center; align-items: center;">
-            Thank You
+            Thank You, your feedback has been sent!
         </div>
 
         <!-- <form action="test.php" method="get">
