make the index page and the news page responsive

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a class="nav-link js-scroll-trigger" href="pages/prevention/prevention.html">Prevention</a>
             </li>
             <li>
-                <a class="nav-link js-scroll-trigger" href="pages/resources/resources.html">Resources</a>
+                <a class="nav-link js-scroll-trigger" href="pages/resources/resources.php">Resources</a>
             </li>
             <li>
                 <a class="nav-link js-scroll-trigger" href="pages/timeline/timeline.html">Timeline</a>
@@ -70,20 +70,22 @@
     </div>
 
     <!-- table of data -->
-    <div class="container-md" >
-        <table class="table table-bordered" >
-        <thead >
-            <tr class="thead-dark" >
-                <th scope="col">Countries</th>
-                <th scope="col">Recovered</th>
-                <th scope="col">Confirmed</th>
-                <th scope="col">Deaths</th>
-            </tr>
-        </thead>
-        <tbody class="body">
-            <script src="scripts/api-script.js"></script>
-        </tbody>
-        </table>
+    <div class="container-md">
+        <div class="table">
+            <table class="table table-bordered" >
+            <thead >
+                <tr class="thead-dark" >
+                    <th scope="col">Countries</th>
+                    <th scope="col">Recovered</th>
+                    <th scope="col">Confirmed</th>
+                    <th scope="col">Deaths</th>
+                </tr>
+            </thead>
+            <tbody class="body">
+                <script src="scripts/api-script.js"></script>
+            </tbody>
+            </table>            
+        </div>
     </div>
 </body>
 </html>
