--- a/pages/symptoms/symptoms.html
+++ b/pages/symptoms/symptoms.html
@@ -45,7 +45,7 @@
                     <a class="nav-link js-scroll-trigger" href="../../pages/treatment/treatment.html">Treatment</a>
                 </li>
                 <li>
-                    <a class="nav-link js-scroll-trigger" href="../../pages/resources/resources.html">Resources</a>
+                    <a class="nav-link js-scroll-trigger" href="../../pages/resources/resources.php">Resources</a>
                 </li>
                 <li>
                     <a class="nav-link js-scroll-trigger" href="../../pages/timeline/timeline.html">Timeline</a>
