--- a/pages/faq/faq.html
+++ b/pages/faq/faq.html
@@ -42,7 +42,7 @@
                     <a class="nav-link js-scroll-trigger" href="../../pages/prevention/prevention.html">Prevention</a>
                 </li>
                 <li>
-                    <a class="nav-link js-scroll-trigger" href="../../pages/resources/resources.html">Resources</a>
+                    <a class="nav-link js-scroll-trigger" href="../../pages/resources/resources.php">Resources</a>
                 </li>
                 <li>
                     <a class="nav-link js-scroll-trigger" href="../../pages/timeline/timeline.html">Timeline</a>
