--- a/pages/prevention/prevention.html
+++ b/pages/prevention/prevention.html
@@ -43,7 +43,7 @@
                     <a class="nav-link js-scroll-trigger" href="">Prevention</a>
                 </li>
                 <li>
-                    <a class="nav-link js-scroll-trigger" href="../../pages/resources/resources.html">Resources</a>
+                    <a class="nav-link js-scroll-trigger" href="../../pages/resources/resources.php">Resources</a>
                 </li>
                 <li>
                     <a class="nav-link js-scroll-trigger" href="../../pages/timeline/timeline.html">Timeline</a>
