--- a/pages/testing/testing.html
+++ b/pages/testing/testing.html
@@ -53,7 +53,7 @@
                     <a class="nav-link js-scroll-trigger" href="../../pages/prevention/prevention.html">Prevention</a>
                 </li>
                 <li>
-                    <a class="nav-link js-scroll-trigger" href="../../pages/resources/resources.html">Resources</a>
+                    <a class="nav-link js-scroll-trigger" href="../../pages/resources/resources.php">Resources</a>
                 </li>
                 <li>
                     <a class="nav-link js-scroll-trigger" href="../../pages/timeline/timeline.html">Timeline</a>
