--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+<html class="no-js">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script>document.documentElement.className = document.documentElement.className.replace('no-js','js');</script>
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     
@@ -101,5 +104,7 @@
         </div>
         </a>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script>$('body').fadeIn(500); // fadein time in ms</script>
 </body>
 </html>
