Added icons to FAQ and Timeline

--- a/pages/faq/faq.html
+++ b/pages/faq/faq.html
@@ -68,6 +68,7 @@
         </nav>
     
         <div class="container-fluid bg-light p-5 text-center my-5">
+            <img src="../../images/faq.svg" alt="FAQ" height="64" style="margin-bottom: 10px;">
             <h1>FAQ page</h1>
             <p class="lead">Frequently asked questions</p>
         </div>
