--- a/pages/timeline/timeline.html
+++ b/pages/timeline/timeline.html
@@ -68,6 +68,7 @@
         </nav>
     
         <div class="container-fluid bg-light p-5 text-center my-5">
+            <img src="../../images/timeline.svg" alt="Timeline" height="64" style="margin-bottom: 10px;">
             <h1>Timeline</h1>
             <p class="lead">A brief timeline of Covid-19</p>
         </div>
