--- a/pages/prevention/prevention.html
+++ b/pages/prevention/prevention.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+<html class="no-js">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>document.documentElement.className = document.documentElement.className.replace('no-js','js');</script>
+
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     
@@ -25,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="../../index.html">Coronavirus Information Center</a>
+            <a class="navbar-brand js-scroll-trigger" href="../../index.html" style="box-shadow: none;">Coronavirus Information Center</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -81,6 +84,7 @@
             </div>
         </div>
 
+    <div class="content">
         <div class="img-cards">
             <div class="card" style="width: 18rem; margin-top:10px">
                 <img class="card-img-top" src="../../images/mask.png" alt="Cinque Terre" height="286">
@@ -110,6 +114,9 @@
                 </div>
             </div>
         </div>
-    <script>$('body').fadeIn(5000); // fadein time in ms</script>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script>$('content').fadeIn(500); </script>
 </body>
 </html>
