--- a/pages/timeline/timeline.html
+++ b/pages/timeline/timeline.html
@@ -72,7 +72,7 @@
             <h1>Timeline</h1>
             <p class="lead">A brief timeline of Covid-19</p>
         </div>
-        <div class="container-md" >   
+        <div class="content-container" >   
             <div class="container-timeline">
                 <div class="timeline">
                   <ul>
