--- a/pages/testing/testing.html
+++ b/pages/testing/testing.html
@@ -67,6 +67,7 @@
         </nav>
 
         <div class="container-fluid bg-light p-5 text-center my-5">
+            <img src="../../images/testing.svg" alt="Testing" height="64" style="margin-bottom: 10px;">
             <h1>Testing Locations</h1>
             <p class="lead">Find Available Testing Location in Ontario</p>
         </div>
