--- a/pages/symptoms/symptoms.html
+++ b/pages/symptoms/symptoms.html
@@ -69,7 +69,7 @@
         </nav>
 
         <div class="container-fluid bg-light p-5 text-center my-5">
-            <img src="sick.png" alt="" class="pics">
+            <img src="../../images/symptoms.svg" alt="Symptoms" height="64" style="margin-bottom: 10px;">
             <h1>Symptoms page</h1>
             <p class="lead">Figure out if you're sick!</p>
         </div>
@@ -105,6 +105,6 @@
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script>$('body').fadeIn(500); </script>
+    <script>$('body').fadeIn(500); // fadein time in ms</script>
     </body>
 </html>
