--- a/pages/symptoms/symptoms.html
+++ b/pages/symptoms/symptoms.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html class="no-js">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,9 +46,6 @@
                     <a class="nav-link js-scroll-trigger" href="../../pages/prevention/prevention.html">Prevention</a>
                 </li>
                 <li>
-                    <a class="nav-link js-scroll-trigger" href="../../pages/treatment/treatment.html">Treatment</a>
-                </li>
-                <li>
                     <a class="nav-link js-scroll-trigger" href="../../pages/resources/resources.php">Resources</a>
                 </li>
                 <li>
@@ -61,6 +59,9 @@
                 </li>
                     <li>
                 <a class="nav-link js-scroll-trigger" href="../../pages/about/about.html">About</a>
+                </li>
+                <li>
+                    <a class="nav-link js-scroll-trigger" href="../../pages/feedback/feedback.html">Feedback</a>
                 </li>
             </ul>
             </div>
