--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -1,6 +1,7 @@
+<!-- This is our about us page. It displays information about us, the creators of this website. It also directs users to our Github profiles. -->
 <!DOCTYPE html>
 <html lang="en">
-<html class="no-js">
+<html class="no-js"> <!-- Require a specific javascript class which streamlines the process of writing javascript code for this page. -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,10 +30,13 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
     <div class="container">
+        <!-- Redirect users to the homepage when clicking our header -->
         <a class="navbar-brand js-scroll-trigger" href="../../index.html" style="box-shadow: none;">Coronavirus Information Center</a>
+        <!-- Responsive navbar that collapses on different devices -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
+        <!-- Hyperlinks in the navbar that redirect you to other parts of our website -->
         <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
             <li>
@@ -67,12 +71,14 @@
     </div>
     </nav>
 
+    <!-- A page specific header which includes an icon and some text describing what this page is designed for. -->
     <div class="container-fluid bg-light p-5 text-center my-5">
         <img src="../../images/heart.svg" alt="Statistics" height="100" style="margin-bottom: 0px;">
         <h1>About us page</h1>
         <p class="lead">Made by the three legends Manveer, Laith and Fars </p>
     </div>
     
+    <!-- A container that holds informative cards about us. Each card has an image and a spot for text. Clicking the cards redirects you to our github pages. -->
     <div class="container-md card-columns">
         <a href="https://github.com/FarsBein">
         <div class="card">
@@ -104,6 +110,7 @@
         </div>
         </a>
     </div>
+    <!-- JS/JQuery code that fades in our webpage in .5 seconds -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script>$('body').fadeIn(500); // fadein time in ms</script>
 </body>
