--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+<!-- This is our index page. It acts as our homepage/landing page. It uses an API to display country specific statistics regarding Covid-19.-->
 <!DOCTYPE html>
 <html lang="en">
-<html class="no-js">
+<html class="no-js"> <!-- Require a specific javascript class which streamlines the process of writing javascript code for this page. -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,13 +26,16 @@
     <title>Covid Info</title>
 </head>
 <body>
-    <!-- Navigation -->
+    <!-- Navigation Bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
     <div class="container">
+        <!-- Redirect users to the homepage when clicking our header -->
         <a class="navbar-brand js-scroll-trigger" href="" style="box-shadow: none;">Coronavirus Information Center</a>
+        <!-- Responsive navbar that collapses on different devices -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
+        <!-- Hyperlinks in the navbar that redirect you to other parts of our website -->
         <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
             <li>
@@ -66,6 +70,7 @@
     </div>
     </nav>
 
+    <!-- A page specific header which includes an icon and some text describing what this page is designed for. -->
     <div class="container-fluid bg-light p-5 text-center my-5" style="width: 100%;">
         <img src="images/data.svg" alt="Statistics" height="64" style="margin-bottom: 10px;">
         <h1>Country Statistics</h1>
@@ -84,12 +89,14 @@
                     <th scope="col">Deaths</th>
                 </tr>
             </thead>
+            <!-- Reference the API script required to populate the table -->
             <tbody class="body">
                 <script src="scripts/api-script.js"></script>
             </tbody>
             </table>            
         </div>
     </div>
+    <!-- JS/JQuery code that fades in our webpage in .5 seconds -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script>$('body').fadeIn(500); // fadein time in ms</script>
 </body>
