--- a/pages/symptoms/symptoms.html
+++ b/pages/symptoms/symptoms.html
@@ -1,6 +1,7 @@
+<!-- This is our symptoms page. It shows the user all possible symptoms you can experience if you're covid positive. -->
 <!DOCTYPE html>
 <html lang="en">
-<html class="no-js">
+<html class="no-js"> <!-- Require a specific javascript class which streamlines the process of writing javascript code for this page. -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,12 +28,16 @@
 </head>
 <body>
     
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="../../index.html" style="box-shadow: none;">Coronavirus Information Center</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+                <div class="container">
+                    <!-- Redirect users to the homepage when clicking our header -->
+                    <a class="navbar-brand js-scroll-trigger" href="../../index.html" style="box-shadow: none;">Coronavirus Information Center</a>
+                    <!-- Responsive navbar that collapses on different devices -->
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <!-- Hyperlinks in the navbar that redirect you to other parts of our website -->
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
@@ -68,13 +73,15 @@
         </div>
         </nav>
 
+        <!-- A icon and header to show the user what this webpage is for. -->
         <div class="container-fluid bg-light p-5 text-center my-5">
             <img src="../../images/symptoms.svg" alt="Symptoms" height="64" style="margin-bottom: 10px;">
             <h1>Symptoms page</h1>
             <p class="lead">Figure out if you're sick!</p>
         </div>
         <h3 style="text-align: center;">Most Common Symptoms</h3>
-
+    
+    <!-- Simple cards with images regarding covid symptoms with text to accompany. -->
     <div class="img-cards">
         <div class="card" style="width: 18rem; margin-top:10px">
             <img class="card-img-top" src="../../images/fever.png" alt="Fever">
@@ -104,6 +111,7 @@
             </div>
         </div>
     </div>
+    <!-- JS script to transition our webpage using a simple fade -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script>$('body').fadeIn(500); // fadein time in ms</script>
     </body>
