--- a/pages/testing/testing.html
+++ b/pages/testing/testing.html
@@ -1,6 +1,7 @@
+<!-- This is our testing page. It shows users different covid 19 testing spots located around Ryerson. -->
 <!DOCTYPE html>
 <html lang="en">
-<html class="no-js">
+<html class="no-js"> <!-- Require a specific javascript class which streamlines the process of writing javascript code for this page. -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,13 +26,16 @@
 </head>
 <body>
     
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="../../index.html" style="box-shadow: none;">Coronavirus Information Center</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
+        <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+                <div class="container">
+                    <!-- Redirect users to the homepage when clicking our header -->
+                    <a class="navbar-brand js-scroll-trigger" href="../../index.html" style="box-shadow: none;">Coronavirus Information Center</a>
+                    <!-- Responsive navbar that collapses on different devices -->
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <!-- Hyperlinks in the navbar that redirect you to other parts of our website -->
             <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li>
@@ -66,12 +70,14 @@
         </div>
         </nav>
 
+        <!-- An icon and header to inform the user what this webpage is for. -->
         <div class="container-fluid bg-light p-5 text-center my-5">
             <img src="../../images/testing.svg" alt="Testing" height="64" style="margin-bottom: 10px;">
             <h1>Testing Locations</h1>
             <p class="lead">Find Available Testing Location in Ontario</p>
         </div>
         
+        <!-- A container that uses iframe cards to display a google maps container. It acts as a regular google maps view, so you can drag it around and zoom in and out. There is also text to accompany each iframe card. -->
         <div class="map-cards-container">
             <div class="card" style="width: 18rem; margin-top:15px">
                 <iframe class="card-img-top" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2883.3980261349448!2d-79.60102069999999!3d43.723057700000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3a4c47501695%3A0xa03984db7b4ebe84!2s2%20Janda%20Ct%2C%20Etobicoke%2C%20ON%20M9W%200A4%2C%20Canada!5e0!3m2!1sen!2sjo!4v1607249916496!5m2!1sen!2sjo" width="300" height="300"  style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe class="card-img-top">
@@ -104,6 +110,7 @@
             </div>
 
         </div>
+        <!-- JS script to fade our webpage in -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script>$('body').fadeIn(500); // fadein time in ms</script>
 </body>
