--- a/pages/treatment/treatment.html
+++ b/pages/treatment/treatment.html
@@ -1,3 +1,4 @@
+<!-- This is an unused webpage that never made it to our live website. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,13 +24,16 @@
 </head>
 <body>
     
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="../../index.html" style="box-shadow: none;">Coronavirus Information Center</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
+        <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+                <div class="container">
+                    <!-- Redirect users to the homepage when clicking our header -->
+                    <a class="navbar-brand js-scroll-trigger" href="../../index.html" style="box-shadow: none;">Coronavirus Information Center</a>
+                    <!-- Responsive navbar that collapses on different devices -->
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <!-- Hyperlinks in the navbar that redirect you to other parts of our website -->
             <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li>
